chore:简写配置文件，配置尽量放到 config-overrides 文件

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-PORT=2000
-GENERATE_SOURCEMAP=false
-REACT_APP_API_URL=http://123.56.202.161/BP.LiuYu.WebApi/api/
-DISABLE_NEW_JSX_TRANSFORM=true
+REACT_APP_API_URL=https://qkstart.com/nestadmin/api/
