--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,1 @@
-REACT_APP_API_URL=http://123.56.202.161/BP.LiuYu.WebApi/api/
-DISABLE_NEW_JSX_TRANSFORM=true
+REACT_APP_API_URL=https://qkstart.com/nestadmin/api/
